--- a/index.html
+++ b/index.html
@@ -7,36 +7,36 @@
         <body>
             <script>
                 
-                /*let 0 = 'rock', 1 = 'paper', 2 = 'scissor';*/
-                
                 function computerPlay( value ) {
-                   let cpuPlay = Math.floor( Math.random() * Math.floor( value ));
+                    Math.floor( Math.random() * Math.floor( value ));
 
-                    if ( cpuPlay == 0 ) {
-                        return cpuPlay = `Rock`;
-                    } else if ( cpuPlay == 1 ) {
-                        return cpuPlay = `Paper`;
-                    } else if ( cpuPlay == 2 ) {
-                        return cpuPlay = `Scissor`;
+                    if ( 0 ) {
+                        return `Rock`;
+                    } else if ( 1 ) {
+                        return `Paper`;
+                    } else if ( 2 ) {
+                        return `Scissor`;
                     }
                 }
 
                 function playRound( playerSelection, computerSelection ) {
-                    if ( playerSelection == `rock` || computerSelection == `paper`) {
+                    if ( playerSelection == `rock` || computerSelection == `Paper`) {
                         return `You lost! Paper beats rock!`;
-
-                    } else if ( playerSelection == p || computerSelection == r ) {
+                    } else if ( playerSelection == `paper` || computerSelection == `Rock` ) {
                         return `You won! Paper beats rock!`;
-                    } else if ( playerSelection == r || computerSelection == s ) {
+                    } else if ( playerSelection == `rock` || computerSelection == `Scissor` ) {
                         return `You won! Rock beats scissor!`;
-                    } else if ( playerSelection == p || computerSelection == s ) {
+                    } else if ( playerSelection == `paper` || computerSelection == `Scissor` ) {
                         return `You lost! Scissor beats paper!`;
-                    } else if ( playerSelection == s || computerSelection == p ) {
+                    } else if ( playerSelection == `scissor` || computerSelection == `Paper` ) {
                         return `You won! Scissor beats paper!`;
-                    } else if ( playerSelection == s || computerSelection == r ) {
+                    } else if ( playerSelection == `scissor` || computerSelection == `Rock` ) {
                         return `You lost! Rock beats scissor!`;
                     }
                 }
+                /*  const playerSelection = 'rock'
+                    const computerSelection = computerPlay()
+                    console.log(playRound(playerSelection, computerSelection))*/
 
 
                 function game( playRound ) {
